# healthcare-data-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-compose.zero-config.yml  install.sh  issues.jsonl  manifest  openclaw.json  opencode.jsonc  pyproject.toml  pyrightconfig.json  smoke_test.py
.beads/: .gitignore  issues.jsonl  metadata.json
.github/workflows/: ci.yml
configs/: claude-desktop.json  http-clients.json
contracts/: README.md
contracts/v1/: public-evidence-bundle.schema.json
contracts/v2/: scale-tabular-input-family-acquisition.schema.json
contracts/v3/: scale-physician-count-acquisition.schema.json
contracts/v4/: scale-service-line-count-acquisition.schema.json
contracts/v5/: scale-safety-net-patient-mix-acquisition.schema.json
contracts/v6/: scale-emergency-department-count-acquisition.schema.json
contracts/v7/: scale-essential-service-designation-count-acquisition.schema.json
desktop-extension/: .mcpbignore  manifest.json
desktop-extension/server/: launcher.py
docs/: 2026-07-16-scale-roster-bed-basis-acquisition-mission-packet.md  2026-07-16-scale-roster-bed-basis-handoff.md  2026-07-17-scale-operating-revenue-acquisition-mission-packet.md  2026-07-18-scale-annual-discharges-acquisition-mission-packet.md  2026-07-18-scale-physician-count-acquisition-mission-packet.md  2026-07-18-scale-service-line-count-acquisition-mission-packet.md  2026-07-19-scale-emergency-department-count-acquisition-mission-packet.md  2026-07-19-scale-essential-service-designation-count-acquisition-mission-packet.md  2026-07-19-scale-safety-net-patient-mix-acquisition-mission-packet.md  CLIENT_PACKAGING.md  DISCOVERY_SERVER.md  HEALTH_SYSTEM_CACHE_MANAGEMENT_PLAN.md  MCP_CLIENTS.md  PROFILE_EVIDENCE_PACK.md  REMOTE_GATEWAY.md  SOURCE_BACKED_RESULT_CONTRACT.md  SOURCE_BACKED_RESULT_MIGRATION_PLAN.md  SOURCE_BACKED_RESULT_POST_MIGRATION_PLAN.md  SOURCE_CAPABILITY_LEDGER.md  STRUCTURED_RESULTS.md  TASK_WORKFLOWS.md  TOOL_DOCUMENTATION_CONTRACT.md  mcp-server-design-recommendations.md
docs/extracted/: README.md
docs/plans/: 2026-03-02-health-system-profiler-design.md  2026-03-02-health-system-profiler-implementation.md  2026-03-03-financial-intelligence-design.md  2026-03-03-financial-intelligence-implementation.md  2026-03-03-irs990-efile-index-fix.md  2026-03-03-physician-referral-network-design.md  2026-03-03-physician-referral-network-implementation.md  2026-03-03-price-transparency-design.md  2026-03-03-price-transparency-implementation.md  2026-03-03-workforce-analytics-design.md  2026-03-03-workforce-analytics-implementation.md  2026-03-05-claims-analytics-design.md  (+9 more)
examples/: claude-desktop-stdio.json  codex-config.toml
qa/reports/: qa_summary.md  (+2 more)
scripts/: acquire_scale_input_family.py  acquire_scale_roster_beds.py  build_mcpb.py  docker_image_tags.py  download_ahrq.py  export_contract_schemas.py  import_acgme_programs.py  mcp_inspector_smoke.sh  mcp_smoke.py  pr-merge.sh  register-codex.sh  render_client_configs.py  render_compose.py  render_env_example.py  render_registry_docs.py  security_gate.py  setup.sh
servers/: __init__.py  _launcher.py  claims_analytics  cms_facility  drive_time  financial_intelligence  geo_demographics  health_system_profiler  hospital_quality  physician_referral_network  price_transparency  service_area  workforce_analytics
shared/: __init__.py  setup_wizard.py  state_health_data.py
tests/: helpers.py  test_cache_manager.py  test_cache_manager_evals.py  test_client_packaging.py  test_discovery_metadata.py  test_distribution_artifacts.py  test_doctor.py  test_env_setup.py  test_gateway_auth.py  test_gateway_http_integration.py  test_gateway_metadata.py  test_identity.py  test_launcher_registry.py  test_mcp_error_contracts.py  test_mcp_resources_and_observability.py  test_mcp_response.py  test_mcp_tool_contracts.py  test_presets.py  test_public_evidence_contract.py  test_scale_annual_discharges_handoff.py  test_scale_emergency_department_count_handoff.py  test_scale_essential_service_designation_count_handoff.py  test_scale_operating_revenue_handoff.py  test_scale_physician_count_handoff.py  test_scale_roster_bed_handoff.py  test_scale_safety_net_patient_mix_handoff.py  test_scale_service_line_count_handoff.py  test_source_backed_result.py  test_source_catalog.py  test_structured_server_imports.py  test_workflows.py
(+333 files in other folders)
