[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthcare-data-mcp"
version = "0.1.0"
description = "MCP servers for public healthcare facility data, service areas, demographics, and quality metrics"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "networkx>=3.3",
    "shapely>=2.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "duckdb>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
census = ["censusdis>=0.15.0"]
routing = ["osmnx>=2.0.0", "aceso>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5.0"]

[project.scripts]
hc-mcp-all = "servers._launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["servers", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 120
