[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthcare-data-mcp"
version = "0.1.0"
description = "MCP servers for public healthcare facility data, service areas, demographics, and quality metrics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AJ HCS" },
]
keywords = ["mcp", "healthcare", "cms", "analytics", "public-data", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "networkx>=3.3",
    "shapely>=2.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "duckdb>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
census = ["censusdis>=0.15.0"]
routing = ["osmnx>=2.0.0", "aceso>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.5.0"]

[project.scripts]
hc-mcp-all = "servers._launcher:main"

[project.urls]
Homepage = "https://github.com/ajhcs/healthcare-data-mcp"
Repository = "https://github.com/ajhcs/healthcare-data-mcp"
Issues = "https://github.com/ajhcs/healthcare-data-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["servers", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 120
